Edited about me and fixed how spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2498,7 +2498,7 @@
 		}
 
 		.spotlight:nth-child(2) {
-			background-color: rgba(255, 255, 255, 0.95);
+			background-color: rgba(239, 239, 239, 1);
 		}
 
 		.spotlight:nth-child(3) {
